SFDC_Learning/src/objects/SubProject__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>SubProjects</relationshipLabel>
        <relationshipName>SubProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubProjectFinish__c</fullName>
        <label>SubProjectFinish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubProjectStart__c</fullName>
        <label>SubProjectStart</label>
        <type>Date</type>
    </fields>
    <label>SubProject</label>
    <nameField>
        <label>SubProject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubProjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>